@@ -10,8 +10,7 @@ Legacy Builds at https://code.google.com/p/urlxl-repo/
 Forum Posting: http://forum.xbmc.org/showthread.php?tid=129709
 
 Disclaimer:
-You will need a Crunchyroll account!
-(No you don't have to pay for it. But it's cheap.)
+You MUST be a Crunchyroll Premium Member!
 
 Thanks to the following for code:
 
